@@ -1,3 +1,8 @@
+2008-04-04  Ales Hakl  <ales at hakl dot net>
+
+	* src/object.c: use DFSCH_TYPE_OF instead of direct acess to type
+	field
+
 2008-04-03  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (lookup_symbol): case-sensitive symbols
